examples/test/testpolicy5209.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5209
  namespace: namespace414
spec:
  podSelector:
    matchLabels:
      key5: value27
      key25: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value48
          key27: value28
          key49: value12
      podSelector:
        matchLabels:
          key44: value1
